# ENOSE

lab3/: Cargo.toml
lab3/.cargo/: config.toml
lab3/esp32_crate/: Cargo.toml  sdkconfig.defaults
lab3/esp32_crate/.cargo/: config.toml
lab3/esp32_crate/src/: main.rs
lab3/gui_crate/: Cargo.toml
lab3/gui_crate/src/: gui.rs  main.rs
